@@ -1,5 +1,8 @@
 2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
 
+	* lib/Automake/FileUtils.pm (open_quote): New function.
+	(update_file, contents): Use it.
+
 	Reword the copyright notices to match what's suggested in GPLv3.
 
 2007-12-08  Ralf Wildenhues  <Ralf.Wildenhues@gmx.de>
